// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 Expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render Expenses Summary with multipleExpense Expense 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totalling 
    $23,543,235,232.32
  </h1>
</div>
`;
